@@ -1,3 +1,10 @@
+2005-05-16  Sarfraaz Ahmed <asarfraaz@novell.com>
+
+	* e-book-backend-gal.c (last_mod_time_populate)(get_time_stamp): 
+	Updates the EContact with the last modified time [ REV field ]
+	Patch submitted by Sushma.
+	(gal_reconnect) : Added some robustness.
+
 2005-05-14  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* configure.in : Check for latest libsoup and use it. This might not be
